Add color adjustment to all RBG channels
* Channel adjustment config

* Create RgbChannelAdjustment.h

* Delete RgbChannelAdjustment.h

* Create RgbChannelAdjustment.cpp

* Create RgbChannelAdjustment.h

* Delete RgbChannelAdjustment.cpp

* Create ColorAdjustment.cpp

* Delete RgbChannelAdjustment.h

* Create ColorAdjustment.h

* Update ColorAdjustment.h

* Update ColorAdjustment.h

* Update ColorAdjustment.h

* Update ColorAdjustment.cpp

* Update Hyperion.cpp

* Update Hyperion.cpp

* Update Hyperion.cpp

* Update Hyperion.h

* Create RgbChannelAdjustment.cpp

* Create RgbChannelAdjustment.h

* Create ColorAdjustment.h

* Create MultiColorAdjustment.h

* Update MultiColorAdjustment.h

* Create MultiColorAdjustment.cpp

* Delete ColorAdjustment.cpp

* Delete ColorAdjustment.h

* Update RgbChannelAdjustment.cpp

* Update Hyperion.cpp

* Update Hyperion.h

* Update Hyperion.cpp

* Bug fixes

* Update hyperion.config.json

* Add color adjustment to json server and client and adapt hyperion-remote

* Change the color modification order

* Minor bug fix

* Create calibration Images folder

* Create calibration Gamma folder

* Create calibration RGB folder

* Added files via upload

* Delete .gitkeep

* Delete .gitkeep

* Added files via upload

* Delete .gitkeep

* Update color effect order and don't correct twice

* Uploaded gradient images


Former-commit-id: 8ab465e59834f12a21709a6f4546bd6808a2a495

--- a/config/hyperion.config.json
+++ b/config/hyperion.config.json
@@ -68,6 +68,31 @@
 				}
 			}
 		],
+		"channelAdjustment" : 
+		[
+			{
+				"id"   : "default",
+				"leds" : "*",
+				"pureRed" :
+				{
+					"redChannel"	: 255,
+					"greenChannel"	: 0,
+					"blueChannel"	: 0
+				},
+				"pureGreen" :
+				{
+					"redChannel"	: 0,
+					"greenChannel"	: 255,
+					"blueChannel"	: 0
+				},
+				"pureBlue" :
+				{
+					"redChannel"	: 0,
+					"greenChannel"	: 0,
+					"blueChannel"	: 255
+				}			
+			}		
+		],		
 		"transform" :
 		[
 			{
