--- a/libsrc/hyperion/CMakeLists.txt
+++ b/libsrc/hyperion/CMakeLists.txt
@@ -19,6 +19,7 @@ SET(Hyperion_HEADERS
 
 		${CURRENT_SOURCE_DIR}/MultiColorTransform.h
 		${CURRENT_SOURCE_DIR}/MultiColorCorrection.h
+		${CURRENT_SOURCE_DIR}/MultiColorAdjustment.h
 		${CURRENT_HEADER_DIR}/MessageForwarder.h
 )
 
@@ -32,6 +33,7 @@ SET(Hyperion_SOURCES
 		${CURRENT_SOURCE_DIR}/ImageToLedsMap.cpp
 		${CURRENT_SOURCE_DIR}/MultiColorTransform.cpp
 		${CURRENT_SOURCE_DIR}/MultiColorCorrection.cpp
+		${CURRENT_SOURCE_DIR}/MultiColorAdjustment.cpp
 		${CURRENT_SOURCE_DIR}/LinearColorSmoothing.cpp
 		${CURRENT_SOURCE_DIR}/MessageForwarder.cpp
 )
