--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Define the main-project name
-project(hyperiond)
+project(hyperion)
 
 # define the minimum cmake version (as required by cmake)
 cmake_minimum_required(VERSION 2.8)
@@ -12,6 +12,7 @@ SET ( DEFAULT_DISPMANX   OFF )
 SET ( DEFAULT_FB         OFF )
 SET ( DEFAULT_OSX        OFF )
 SET ( DEFAULT_X11        OFF )
+SET ( DEFAULT_SPIDEV     OFF )
 SET ( DEFAULT_WS2812BPWM OFF )
 SET ( DEFAULT_WS281XPWM  OFF )
 
@@ -20,13 +21,18 @@ if (APPLE)
 else ()
 	if ( "${PLATFORM}" STREQUAL "rpi" )
 		SET ( DEFAULT_DISPMANX   ON )
+		SET ( DEFAULT_SPIDEV     ON )
+	elseif ( "${PLATFORM}" STREQUAL "rpi-pwm" )
+		SET ( DEFAULT_DISPMANX   ON )
 		SET ( DEFAULT_WS2812BPWM ON )
 		SET ( DEFAULT_WS281XPWM  ON )
+		SET ( DEFAULT_SPIDEV     ON )
 	elseif ( "${PLATFORM}" STREQUAL "wetek" )
 		SET ( DEFAULT_AMLOGIC    ON )
 		SET ( DEFAULT_FB         ON )
 	elseif ( "${PLATFORM}" STREQUAL "x86" )
 		SET ( DEFAULT_X11        ON )
+		SET ( DEFAULT_FB         ON )
 	elseif ( "${PLATFORM}" STREQUAL "imx6" )
 		SET ( DEFAULT_FB         ON )
 	endif()
@@ -48,7 +54,7 @@ message(STATUS "ENABLE_OSX = " ${ENABLE_OSX})
 option(ENABLE_PROTOBUF "Enable PROTOBUF server" ON)
 message(STATUS "ENABLE_PROTOBUF = " ${ENABLE_PROTOBUF})
 
-option(ENABLE_SPIDEV   "Enable the SPIDEV device" ON)
+option(ENABLE_SPIDEV   "Enable the SPIDEV device" ${DEFAULT_SPIDEV} )
 message(STATUS "ENABLE_SPIDEV   = " ${ENABLE_SPIDEV})
 
 option(ENABLE_TINKERFORGE "Enable the TINKERFORGE device" ON)
@@ -88,13 +94,6 @@ if(ENABLE_OSX AND ENABLE_DISPMANX)
 	message(FATAL_ERROR "dispmanx grabber and osx grabber cannot be used at the same time")
 endif()
 
-if (DEFINED INSTALL_PREFIX)
-	SET( ENABLE_SYSTEM_INSTALL ON)
-	SET( CMAKE_INSTALL_PREFIX "${INSTALL_PREFIX}" )
-else()
-	SET(ENABLE_SYSTEM_INSTALL OFF)
-endif()
-
 SET ( PROTOBUF_INSTALL_BIN_DIR ${CMAKE_BINARY_DIR}/proto )
 SET ( PROTOBUF_INSTALL_LIB_DIR ${CMAKE_BINARY_DIR}/proto )
 
@@ -125,7 +124,7 @@ endif()
 # Define the global output path of binaries
 SET(LIBRARY_OUTPUT_PATH    ${PROJECT_BINARY_DIR}/lib)
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
-SET(DEPLOY_DIR "${CMAKE_SOURCE_DIR}/deploy/hyperion" )
+
 file(MAKE_DIRECTORY ${LIBRARY_OUTPUT_PATH})
 file(MAKE_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})
 
