--- a/libsrc/grabber/x11/CMakeLists.txt
+++ b/libsrc/grabber/x11/CMakeLists.txt
@@ -19,20 +19,20 @@ SET(X11_HEADERS
 )
 
 SET(X11_SOURCES
-		${CURRENT_SOURCE_DIR}/X11Grabber.cpp
+	${CURRENT_SOURCE_DIR}/X11Grabber.cpp
 )
 
 if(ENABLE_QT5)
-QT5_WRAP_CPP(X11_HEADERS_MOC ${X11_QT_HEADERS})
-else(ENABLE_QT5)
-QT4_WRAP_CPP(X11_HEADERS_MOC ${X11_QT_HEADERS})
-endif(ENABLE_QT5)
+	QT5_WRAP_CPP(X11_HEADERS_MOC ${X11_QT_HEADERS})
+else()
+	QT4_WRAP_CPP(X11_HEADERS_MOC ${X11_QT_HEADERS})
+endif()
 
 add_library(x11-grabber
-		${X11_HEADERS}
-		${X11_SOURCES}
-		${X11_QT_HEADERS}
-		${X11_HEADERS_MOC}
+	${X11_HEADERS}
+	${X11_SOURCES}
+	${X11_QT_HEADERS}
+	${X11_HEADERS_MOC}
 )
 
 target_link_libraries(x11-grabber
