--- a/libsrc/grabber/framebuffer/CMakeLists.txt
+++ b/libsrc/grabber/framebuffer/CMakeLists.txt
@@ -9,31 +9,31 @@ SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/grabber/framebuffer)
 
 # Group the headers that go through the MOC compiler
 SET(FramebufferGrabberQT_HEADERS
-		${CURRENT_HEADER_DIR}/FramebufferWrapper.h
+	${CURRENT_HEADER_DIR}/FramebufferWrapper.h
 )
 
 SET(FramebufferGrabberHEADERS
-		${CURRENT_HEADER_DIR}/FramebufferFrameGrabber.h
+	${CURRENT_HEADER_DIR}/FramebufferFrameGrabber.h
 )
 
 SET(FramebufferGrabberSOURCES
-		${CURRENT_SOURCE_DIR}/FramebufferWrapper.cpp
-		${CURRENT_SOURCE_DIR}/FramebufferFrameGrabber.cpp
+	${CURRENT_SOURCE_DIR}/FramebufferWrapper.cpp
+	${CURRENT_SOURCE_DIR}/FramebufferFrameGrabber.cpp
 )
 
 if(ENABLE_QT5)
 	QT5_WRAP_CPP(FramebufferGrabberHEADERS_MOC ${FramebufferGrabberQT_HEADERS})
-else(ENABLE_QT5)
+else()
 	QT4_WRAP_CPP(FramebufferGrabberHEADERS_MOC ${FramebufferGrabberQT_HEADERS})
-endif(ENABLE_QT5)
+endif()
 
 add_library(framebuffer-grabber
-		${FramebufferGrabberHEADERS}
-		${FramebufferGrabberQT_HEADERS}
-		${FramebufferGrabberHEADERS_MOC}
-		${FramebufferGrabberSOURCES}
+	${FramebufferGrabberHEADERS}
+	${FramebufferGrabberQT_HEADERS}
+	${FramebufferGrabberHEADERS_MOC}
+	${FramebufferGrabberSOURCES}
 )
 
 target_link_libraries(framebuffer-grabber
-		hyperion
-		${QT_LIBRARIES})
+	hyperion
+	${QT_LIBRARIES})
