--- a/libsrc/utils/CMakeLists.txt
+++ b/libsrc/utils/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 # Define the current source locations
 SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/utils)
 SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/utils)
@@ -12,6 +11,8 @@ add_library(hyperion-utils
 	${CURRENT_SOURCE_DIR}/ColorRgb.cpp
 	${CURRENT_HEADER_DIR}/ColorRgba.h
 	${CURRENT_SOURCE_DIR}/ColorRgba.cpp
+	${CURRENT_HEADER_DIR}/ColorRgbw.h
+	${CURRENT_SOURCE_DIR}/ColorRgbw.cpp
 	${CURRENT_HEADER_DIR}/Image.h
 	${CURRENT_HEADER_DIR}/Sleep.h
 
@@ -31,6 +32,9 @@ add_library(hyperion-utils
 	${CURRENT_SOURCE_DIR}/RgbChannelCorrection.cpp
 	${CURRENT_HEADER_DIR}/RgbChannelAdjustment.h
 	${CURRENT_SOURCE_DIR}/RgbChannelAdjustment.cpp
+
+	${CURRENT_HEADER_DIR}/RgbToRgbw.h
+	${CURRENT_SOURCE_DIR}/RgbToRgbw.cpp
 
 	${CURRENT_HEADER_DIR}/jsonschema/JsonFactory.h
 	${CURRENT_HEADER_DIR}/jsonschema/JsonSchemaChecker.h
