--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,9 @@ project(hyperion)
 # define the minimum cmake version (as required by cmake)
 cmake_minimum_required(VERSION 2.8)
 
-#set(CMAKE_TOOLCHAIN_FILE /opt/raspberrypi/Toolchain-RaspberryPi.cmake)
+IF ( POLICY CMP0026 )
+	CMAKE_POLICY( SET CMP0026 OLD )
+ENDIF()
 
 
 SET ( DEFAULT_AMLOGIC    OFF )
@@ -54,8 +56,6 @@ message(STATUS "ENABLE_FB = " ${ENABLE_FB})
 
 option(ENABLE_OSX "Enable the osx grabber" ${DEFAULT_OSX} )
 message(STATUS "ENABLE_OSX = " ${ENABLE_OSX})
-
-set(ENABLE_PROTOBUF  ON)
 
 option(ENABLE_SPIDEV   "Enable the SPIDEV device" ${DEFAULT_SPIDEV} )
 message(STATUS "ENABLE_SPIDEV   = " ${ENABLE_SPIDEV})
