--- a/HyperionConfig.h.in
+++ b/HyperionConfig.h.in
@@ -30,4 +30,8 @@
 // Define to enable the bonjour/zeroconf publishing
 #cmakedefine ENABLE_ZEROCONF
 
+// Define to enable profiler for development purpose
+#cmakedefine ENABLE_PROFILER
+
+// the hyperion build id string
 #define HYPERION_VERSION_ID "${HYPERION_VERSION_ID}"
